# midi2cmd

./: .pre-commit-config.yaml  CLAUDE.md  FEATURE_SPEC.md  IMPLEMENTATION_PLAN.md  justfile  mise.toml  pyproject.toml  virtual_midi_device.py
.claude/: CLAUDE.md  settings.json
.github/workflows/: ci.yml
src/midi2cmd/: console.py  midi_reader.py  utils.py
tests/: test_config_accumulate_window.py  test_console.py  test_integration.py  test_midi_reader.py  test_utils.py
tests/fixtures/: example.config.toml  example.config.txt  example.config.yaml  integration.config.txt
