[project]
name = "midi2cmd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.7",
    "mido>=1.3.3",
    "python-rtmidi>=1.5.8",
]

[project.scripts]
midi2cmd = "midi2cmd.console:main"

[dependency-groups]
dev = [
    "aider-chat>=0.66.0",
    "pytest>=8.3.4",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
exclude = [ ".venv" ]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
