[project]
name = "midi2cmd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "mido>=1.3.3",
    "python-rtmidi>=1.5.8",
    "PyYAML>=6.0.2",
    "typer>=0.15.1",
]

[project.scripts]
midi2cmd = "midi2cmd.console:app"

[dependency-groups]
dev = [
    "aider-chat[browser]>=0.71.1",
    "mypy>=1.13.0",
    "pytest>=8.3.4",
    "types-PyYAML>=6.0.12.20240917",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
exclude = [ ".venv" ]
# useLibraryCodeForTypes = true
reportMissingTypeStubs = false
reportAttributeAccessIssue = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
# disable_error_code = "import-untyped"

[[tool.mypy.overrides]]
module = "mido"
ignore_missing_imports = true

[tool.ruff]
line-length = 88
lint.extend-select = ["I"]

[tool.bandit]
skips = ["B101"]
